--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/44b6090e81.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <div class="container-of-allBody">
-        <div class="container-of-programm">
+        <div class="container-of-allBody__container-of-programm">
             <table>
                 <tbody>
                     <tr>
@@ -31,60 +30,60 @@
                         <td>xylophone</td>
                         <td>
                             <input id="notes" type="" name="">
-                            <div class="container">
-                                <div class="bottom-row">
-                                    <div class="note note-13" data-frequency="196.00" value='g' id="clickNote1">
+                            <div class="container-of-programm__container">
+                                <div class="container-of-programm__note-row">
+                                    <div class="note note__note-row" data-frequency="196.00">
                                         <div>G</div>
                                     </div>
-                                    <div class="note note-14" data-frequency="220.00">
+                                    <div class="note note__note-row" data-frequency="220.00">
                                         <div>A</div>
                                     </div>
-                                    <div class="note note-15" data-frequency="246.94">
+                                    <div class="note note__note-row" data-frequency="246.94">
                                         <div>B</div>
                                     </div>
-                                    <div class="note note-16" data-frequency="261.63">
+                                    <div class="note note__note-row" data-frequency="261.63">
                                         <div>C</div>
                                     </div>
-                                    <div class="note note-17" data-frequency="293.66">
+                                    <div class="note note__note-row" data-frequency="293.66">
                                         <div>D</div>
                                     </div>
-                                    <div class="note note-18" data-frequency="329.63">
+                                    <div class="note note__note-row" data-frequency="329.63">
                                         <div>E</div>
                                     </div>
-                                    <div class="note note-19" data-frequency="349.23">
+                                    <div class="note note__note-row" data-frequency="349.23">
                                         <div>F</div>
                                     </div>
-                                    <div class="note note-20" data-frequency="392.00">
+                                    <div class="note note__note-row" data-frequency="392.00">
                                         <div>G</div>
                                     </div>
-                                    <div class="note note-21" data-frequency="440.00">
+                                    <div class="note note__note-row" data-frequency="440.00">
                                         <div>A</div>
                                     </div>
-                                    <div class="note note-22" data-frequency="493.88">
+                                    <div class="note note__note-row" data-frequency="493.88">
                                         <div>B</div>
                                     </div>
-                                    <div class="note note-23" data-frequency="523.25">
+                                    <div class="note note__note-row" data-frequency="523.25">
                                         <div>C</div>
                                     </div>
-                                    <div class="note note-24" data-frequency="587.33">
+                                    <div class="note note__note-row" data-frequency="587.33">
                                         <div>D</div>
                                     </div>
-                                    <div class="note note-25" data-frequency="659.25">
+                                    <div class="note note__note-row" data-frequency="659.25">
                                         <div>E</div>
                                     </div>
-                                    <div class="note note-26" data-frequency="698.46">
+                                    <div class="note note__note-row" data-frequency="698.46">
                                         <div>F</div>
                                     </div>
-                                    <div class="note note-27" data-frequency="783.99">
+                                    <div class="note note__note-row" data-frequency="783.99">
                                         <div>G</div>
                                     </div>
-                                    <div class="note note-28" data-frequency="880.00">
+                                    <div class="note note__note-row" data-frequency="880.00">
                                         <div>A</div>
                                     </div>
-                                    <div class="note note-29" data-frequency="987.77">
+                                    <div class="note note__note-row" data-frequency="987.77">
                                         <div>B</div>
                                     </div>
-                                    <div class="note note-30" data-frequency="1046.50">
+                                    <div class="note note__note-row" data-frequency="1046.50">
                                         <div>C</div>
                                     </div>
                                 </div>
