--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
             </table>
         </div>
     </div>
-    <script type="bundle/bundle.js"></script>
-    <script type="text/javascript" src="script.js">
+    <script type="text/javascript" src="dist/main.js"></script>
     </script>
 </body>
 </html>
