--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </div>
     <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
     </script>
 </body>
 </html>
